<resources>
    <string name="app_name">Απολελέμετρο Οπλίτη</string>
    <string name="app_email">echarissopoulos@gmail.com</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="programmer_name">by left4dev</string>
    <string name="content_desc_logo">Logo</string>
    <string name="email_about_page">E-mail Επικοινωνίας</string>
    <string name="facebook_word">Facebook</string>
    <string name="instagram_word">Instagram</string>
    <string name="donate_word">Donate</string>
    <string name="feedback_word">Feedback</string>
    <string name="send_message">Send Message</string>
    <string name="donate_1">Donate 1€</string>
    <string name="donate_2">Donate 2€</string>
    <string name="donate_5">Donate 5€</string>
    <string name="donate_10">Donate 10€</string>
    <string name="namePlaceholder">Όνοματεπώνυμο</string>
    <string name="dismissal_placeholder">Ημ/νια Απόλυσης</string>
    <string name="enlistment_placeholder">Ημ/νια Κατάταξης</string>
    <string name="seira">Σειρά</string>
    <string name="esso">ΕΣΣΟ</string>
    <string name="save_changes">Ενημερωση</string>
    <string name="synolo">Σύνολο :</string>
    <string name="ypiretithinkan">Υπηρετήθηκαν :</string>
    <string name="date_of_service_placeholder">Ημ/νια Υπηρεσίας</string>

    <!--    Paths-->
    <string name="services_path">/data/user/0/com.left4dev.leledometrostratou/files/ServicesData.xml</string>
    <string name="vacations_path">/data/user/0/com.left4dev.leledometrostratou/files/VacationsData.xml</string>
    <string name="personal_info_path">/data/user/0/com.left4dev.leledometrostratou/files/personalData.xml</string>
    <string name="penalties_path">/data/user/0/com.left4dev.leledometrostratou/files/PenaltiesData.xml</string>
    <string name="outs_path">/data/user/0/com.left4dev.leledometrostratou/files/OutsData.xml</string>
    <string name="notes_path">/data/user/0/com.left4dev.leledometrostratou/files/NotesData.xml</string>


    <string name="ti_na_paro_mazi_mou_ston_strato_link">https://drive.google.com/file/d/1y4598KI6hAh2TQdjN1U8VzRfIBR7yjYk/view?usp=sharing</string>
    <string name="dic_link">https://drive.google.com/file/d/1zDmIn9mHs1IOCbnowV7qPSnDIQENXYbs/view?usp=sharing</string>
    <string name="xaire_link">https://drive.google.com/file/d/1sXc6Cy3DQaIT9HQwDcKzdiOlc0-HotwW/view?usp=sharing</string>
    <string name="para_link">https://drive.google.com/file/d/1U9YpLBYFHU18wN9wfC0eFjN9GDB4j1mo/view?usp=sharing</string>
    <string name="date_of_out_placeholder">Ημ/νια Εξόδου</string>
    <string name="save_word">Αποθήκευση</string>
    <string name="asm_placeholder">ΑΣΜ</string>
    <string name="id_num_placeholder">Αρ.Ταυτότητας</string>
    <string name="gun_num_placeholder">Αρ.Όπλου</string>
    <string name="knife_num_placeholder">Αρ.Ξιφολογχης</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <!--    -->
</resources>