<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/armyGreenSub"
    android:orientation="vertical"
    tools:context=".DonateActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDonate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ArmyGreen"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/armyGreenSub"
        android:text="@string/donate_1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/armyGreenSub"
        android:text="@string/donate_2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/armyGreenSub"
        android:text="@string/donate_5" />

    <Button
        android:id="@+id/button4"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/armyGreenSub"
        android:text="@string/donate_10" />

</LinearLayout>