<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about.About">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgAppLogo"
            android:layout_width="212dp"
            android:layout_height="210dp"
            android:layout_gravity="center"
            android:contentDescription="@string/content_desc_logo"
            android:src="@mipmap/ic_app_icon_foreground" />

        <TextView
            android:id="@+id/textAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:text="@string/app_name"
            android:textColor="@color/ArmyGreen"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/textProgrammer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:alpha="57"
            android:text="@string/programmer_name"
            android:textColor="@color/ArmyGreen"
            android:textSize="24sp"
            android:textStyle="italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="62dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="289dp"
            android:layout_gravity="center_vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <TextView
                    android:id="@+id/textEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/email_about_page" />

                <Button
                    android:id="@+id/buttonEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="20dp"
                    android:backgroundTint="@color/button_mail"
                    android:text="@string/send_message"
                    app:icon="@android:drawable/ic_dialog_email"
                    app:iconGravity="textEnd"
                    app:iconSize="22dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="42dp"
                    android:layout_height="51dp"
                    android:layout_gravity="left"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/facebook_word" />

                <Button
                    android:id="@+id/buttonFB"
                    android:layout_width="152dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="20dp"
                    android:backgroundTint="@color/fb_blue"
                    android:paddingLeft="13dp"
                    android:paddingRight="10dp"
                    android:text="Like στην Σελίδα"
                    android:textSize="12sp"
                    app:icon="@drawable/ic_baseline_thumb_up_alt_24"
                    app:iconGravity="textEnd" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="51dp"
                    android:gravity="center|left"
                    android:padding="10dp"
                    android:text="@string/instagram_word" />

                <Button
                    android:id="@+id/instagramButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="20dp"
                    android:backgroundTint="#C13584"
                    android:paddingStart="30dp"
                    android:text="Follow"
                    android:textAlignment="inherit"
                    android:textSize="16sp"
                    app:icon="@drawable/ic_baseline_person_add_alt_1_24"
                    app:iconGravity="textEnd"
                    app:iconPadding="39dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="51dp"
                    android:gravity="center|left"
                    android:padding="10dp"
                    android:text="@string/donate_word" />

                <Button
                    android:id="@+id/donationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="20dp"
                    android:backgroundTint="#008519"
                    android:paddingStart="20dp"
                    android:text="Support"
                    android:textAlignment="inherit"
                    android:textSize="16sp"
                    app:icon="@drawable/ic_charity_donation_hand_love"
                    app:iconGravity="textEnd"
                    app:iconPadding="39dp"
                    app:iconSize="66px" />
            </TableRow>

        </TableLayout>
    </LinearLayout>

</FrameLayout>